snippets/Nemerle.Statechart/Tests/testsuite/negative/no_statechart_to_generate.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
[statechart(
  <#
  flags testing;
  name "concurrent states and do activities";
  //flags debug;

  region A
  {
    state B
    {
      do / act1;
    }

  } and
  {
    state C
    {
      do / act2;
    }

  }


  #>)]
public class example
{

}

/// <summary>
  /// Description of junction_example.
  /// </summary>
[statechart( // W: No Statechart to generate
  <#
  flags testing;
  name "concurrent states and do activities";
  //flags debug;

  #>)]
public class example2
{

}

module Test
{
  Main() : void
  {
  }
}
